when we set up the grid, the aside element was dictracted to have a width of 15rem and main would take up the remaining space. To avoid overflow for the entire main element, we specify the width of the main element and allow horizontal overflow for the elements of class "job-experience"

--- a/style.css
+++ b/style.css
@@ -83,6 +83,7 @@ body {
 
 main {
   grid-column: 2;
+  width: calc(100vw - 15rem);
 }
 
 aside {
@@ -113,6 +114,7 @@ aside {
   display: grid;
   gap: 1rem;
   grid-auto-flow: column;
+  overflow-x: auto;
 }
 
 .job {
